--- a/admin/product.css
+++ b/admin/product.css
@@ -8,7 +8,7 @@ body {
 
 .admin-content-left {
     width: 200px;
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.5); /* Đổi từ #333 thành rgba(51, 51, 51, 0.5) */
     color: #fff;
     height: 100vh;
     padding: 20px;
